crates/callsoro-syntax/src/snapshots/callsoro_syntax__parser__tests__snapshot_minimal_fixture.snap
---
source: crates/callsoro-syntax/src/parser.rs
expression: prog
---
Program {
    uses: [],
    consts: [],
    directives: [
        Network {
            value: "testnet",
            span: Span {
                start: 0,
                end: 15,
                line: 1,
                col: 1,
            },
        },
        Source {
            value: "GAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWHF",
            span: Span {
                start: 16,
                end: 80,
                line: 2,
                col: 1,
            },
        },
    ],
    calls: [
        Call {
            contract: "CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABSC4",
            method: "balance",
            args: [
                Address(
                    "GAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWHF",
                    Span {
                        start: 155,
                        end: 222,
                        line: 5,
                        col: 3,
                    },
                ),
            ],
            interface: None,
            span: Span {
                start: 82,
                end: 224,
                line: 4,
                col: 1,
            },
        },
    ],
}
